test/SIL/parse_swift_decls_in_sil_mode.sil
// RUN: %target-typecheck-verify-swift

typealias Int = ()

deinit // expected-error {{deinitializers may only be declared within a class, actor, or noncopyable type}}

subscript (x : Int, y : Int) -> Int { get }// expected-error{{'subscript' functions may only be declared within a type}}

init(i:Int) // expected-error {{initializers may only be declared within a type}}

